[package]
name = "ttk-filter-clone"
version = "0.1.0"
authors = ["Serhii Lekariev <sae3023@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"escapi" = '4'
"image" = "0.23"
"pixels" = "0.2.0"
"winit" = "0.24.0"